[project]
name = "pyspark-cbor"
version = "0.1.0"
description = "Reading and writing CBOR files with PySpark"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "cbor2>=5.6.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[dependency-groups]
test = [
    "pytest>=8.3.5",
    "pyspark[connect]==4.0.0.dev2",
]
dev = [
    "ruff>=0.11.1",
]
